# queueflow

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  azure-pipelines.yml  docker-compose.yml  pytest.ini  requirements.txt
api/: admin_auth.py  auth.py  main.py  middleware.py  schemas.py
core/: config.py  constants.py  database.py  db_models.py  dlq.py  events.py  key_utils.py  lock.py  metrics.py  models.py  queue.py  rate_limiter.py  scheduler.py  ws_limits.py
frontend/: .env.production  vite.config.js
infra/: prometheus.yml
loadtest/: locustfile.py
reports/: report_20260406_224734.json  report_20260406_224927.json  report_20260408_131131.json  report_20260408_141606.json  report_20260408_142943.json  report_20260408_144737.json  report_20260408_200324.json  report_20260408_200836.json  report_20260408_201133.json  report_20260408_204747.json  report_20260408_205034.json  report_20260412_205350.json  report_20260412_225357.json  report_20260413_163231.json  report_20260413_163341.json  report_20260413_172548.json
repositories/: task_repo.py
scripts/: bootstrap_admin.py
sdk/: __init__.py  client.py  exceptions.py  models.py
sdk-package/: LICENSE  README.md  pyproject.toml
sdk-package/src/queueflow_sdk/: __init__.py  client.py  exceptions.py  models.py
services/: task_service.py
static/: dashboard.html
tests/: conftest.py  test_api.py  test_handlers.py  test_handlers_errors.py  test_integration.py  test_key_utils.py  test_loops_integration.py  test_redis_helpers.py  test_routes_extra.py  (+5 more)
(+15 files in other folders)
