[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queueflow-sdk"

version = "0.1.0"

description = "Python SDK for Queueflow distributed task queue"

readme = "README.md"

requires-python = ">=3.9"

license = {text = "MIT"}

authors = [
    {name = "Ashad Baig", email = "baigashad.in@gmail.com"},
]

# PypI classifiers - help users find package by category classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Dependecies automatically installed when someone pip installs the package
# httpx — it handles all HTTP requests
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
# Links shown on the PyPI page
Homepage = "https://github.com/baigashad-in/queueflow"
Documentation = "https://github.com/baigashad-in/queueflow#sdk"
Repositry = "https://github.com/baigashad-in/queueflow"

[tool.setuptools.packages.find]
# Tells setuptools to look for packages inside the src/directory
# keeps package code seperate from project files
where = ["src"]
